# fastapi-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/: dependancies.py  router.py
app/api/routes/: health.py  info.py
app/api/schemas/: health.py  info.py
app/core/: auth.py  config.py  db.py  exceptions.py  logging.py  redis.py  security.py
app/middlewares/: cors.py  logging.py  request_id.py
app/models/: base.py
app/schemas/: base.py  pagination.py
app/services/: base.py
scripts/: seed_db.py
tests/: conftest.py  test_health.py  test_info.py
